[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/scripts/preStart.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/Jaro-Regular-VariableFont_opsz.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 2 )

[node name="preStart" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="countdownLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -10.0
margin_right = 20.0
margin_bottom = 10.0
custom_fonts/font = SubResource( 1 )
align = 1

[node name="inBetween" type="Timer" parent="."]

[connection signal="timeout" from="inBetween" to="." method="_on_inBetween_timeout"]
